# mcp-python-sdk

examples/servers/simple-memory-auth/: README.md  pyproject.toml
examples/servers/simple-memory-auth/mcp_memory_auth/: server.py
